implement search by name type and location
