# app/Http/Controllers/ItemsController.php
@@ -207,6 +207,94 @@ class ItemsController extends Controller
 
     }
 
+     /** @OA\Get(
+        *     path="/api/items/by/name/{name}",
+        *     description="Show items by name",
+        *     tags={"Items"},
+        *     @OA\Response(response="default", description="Get items by name"),
+        * @OA\Parameter(
+        *         description="Name of item",
+        *         name="name",
+        *         in="query",
+        *         required=true,
+        *         @OA\Schema(
+        *             type="string",
+        *             format="file"
+        *         ),
+        *     ),
+        * )
+        */
+        public function show_by_name(Request $request)
+        {
+            $items = Item::where('name',$request->name)->get();
+
+            if ($items == null || sizeof($items) == 0) {
+                return abort(400, 'There exists no items with this name.');
+            }
+
+            $jsonResponse = [];
+
+            foreach($items as $item) {
+                $resturant_name = Resturant::find($item->resturant_id)->name;
+                array_push($jsonResponse, [
+                'id' => $item->id,
+                'name' => $item->name,
+                'type' => $item->type,
+                'price' => $item->price,
+                'rating' => $item->rating,
+                'resturant' => $resturant_name,
+                'reports' => $item->reports,
+                'is_bad' => $item->is_bad,
+                ]);
+            }
+            return $jsonResponse;
+
+        }
+
+        /** @OA\Get(
+        *     path="/api/items/by/type/{type}",
+        *     description="Show items by type",
+        *     tags={"Items"},
+        *     @OA\Response(response="default", description="Get items by type"),
+        * @OA\Parameter(
+        *         description="Type of item",
+        *         name="type",
+        *         in="query",
+        *         required=true,
+        *         @OA\Schema(
+        *             type="string",
+        *             format="file"
+        *         ),
+        *     ),
+        * )
+        */
+        public function show_by_type(Request $request)
+        {
+            $items = Item::where('type',$request->type)->get();
+
+            if ($items == null || sizeof($items) == 0) {
+                return abort(400, 'There exists no items with this name.');
+            }
+
+            $jsonResponse = [];
+
+            foreach($items as $item) {
+                $resturant_name = Resturant::find($item->resturant_id)->name;
+                array_push($jsonResponse, [
+                'id' => $item->id,
+                'name' => $item->name,
+                'type' => $item->type,
+                'price' => $item->price,
+                'rating' => $item->rating,
+                'resturant' => $resturant_name,
+                'reports' => $item->reports,
+                'is_bad' => $item->is_bad,
+                ]);
+            }
+            return $jsonResponse;
+
+        }
+
     /**
      * Show the form for editing the specified resource.
      *
